# LaViLa

./: pyproject.toml
lavila/models/: beam_search.py  gpt2_gated.py  models.py  narrator.py
