[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lavila"
version = "0.1.0"
description = "LaViLa: Learning Video Representations from Large Language Models (facebookresearch/LaViLa packaged for pip install)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "timm",
    "transformers>=4.27,<4.50",
    "einops",
    "decord",
    "pandas",
    "ftfy",
    "regex",
]

[project.urls]
Upstream = "https://github.com/facebookresearch/LaViLa"

[tool.setuptools.packages.find]
include = ["lavila*"]

[tool.setuptools.package-data]
"lavila.models" = ["*.txt.gz"]
